# nullsend

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/pipeline/: __init__.py  anonymizer.py  audit.py  ner.py  ner_config.yaml  vault.py
backend/providers/: __init__.py  anthropic.py  base.py  openai_compat.py
backend/routers/: __init__.py  analyze.py  audit.py  send.py  session.py  vault.py
backend/scripts/: convert_gliner_onnx.py
backend/tests/: test_anonymizer.py  test_api.py  test_ner.py  test_vault.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: analyze.ts  client.ts  send.ts  session.ts  vault.ts
frontend/src/components/conversation/: ConversationFeed.tsx  MessageBubble.tsx  StreamingMessage.tsx  ThinkingIndicator.tsx
frontend/src/components/hitl/: AddEntityForm.tsx  EntityPopover.tsx  EntityRow.tsx  HITLEmptyState.tsx  HITLSidebar.tsx  PromptPreview.tsx
frontend/src/components/input/: PromptInput.tsx  SendButton.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  StatusBar.tsx
frontend/src/components/vault/: TokenRow.tsx  VaultPanel.tsx
frontend/src/hooks/: useAnalyze.ts  useAnnotatedEditor.ts  useSession.ts  useStream.ts  useVault.ts
frontend/src/store/: conversation.ts  hitl.ts  session.ts
frontend/src/types/: index.ts
